# mpactr

./: .Rbuildignore  .gitignore  .lintr  404.html  CRAN-SUBMISSION  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE-text.md  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  TODO  _pkgdown.yml  authors.html  authors.md  cran-comments.md  example.csv  index.html  index.md  llms.txt  mpactR.Rproj  output.txt  pkgdown.yml  search.json  sitemap.xml
R/: RcppExports.R  data.R  filter_pactr-accessors.R  filter_pactr-class.R  filter_pactr-methods.R  filters.R  import_data.R  mpactR-package.R  mpactr-accessors.R  mpactr-class.R  mpactr-methods.R  mpactr.R  pactr-class_cloning.R  peak_table_formatter.R  qc_graph_pactr-class.R  quality_control.R  setup.R  statistics.R  summary-class.R  test.R  utils.R
articles/: downstream_analyses.html  downstream_analyses.md  filter.html  filter.md  filter2.html  filter2.md  index.html  index.md  mpactr.html  mpactr.md  reference_semantics.html  reference_semantics.md
data/: CulturesData.rda  cultures_data.rda
data-raw/: CulturesData.R  cultures_csv.r  metaboscape_ft.r
man/: CulturesData.Rd  clone.Rd  cultures_data.Rd  cv_values.Rd  example.Rd  filter_cv.Rd  filter_group.Rd  filter_insource_ions.Rd  filter_mismatch_ions.Rd  filter_mispicked_ions.Rd  filter_summary.Rd  get_cv_data.Rd  get_group_averages.Rd  get_meta_data.Rd  get_metadata.Rd  get_peak_table.Rd  get_raw_data.Rd  (+10 more)
src/: CMakeLists.txt  CvFilter.cpp  CvFilter.h  FeatureData.h  IntensityPeaks.h  Math.h  PeakTable.cpp  PeakTable.h  RcppExports.cpp  main.cpp
(+95 files in other folders)
